<resources>
    <string name="app_name">H5170043_MuhammedCagatayMercan</string>

    <string name="exit">Çıkış</string>
    <string name="return_to_category">Anasayfaya Dön</string>
    
    // LoginActivity
    <string name="login_name">Oyuncu Adı:</string>
    <string name="login_next">İleri</string>
    <string name="login_empty_name">Oyuncu</string>

    // CategoryActivity
    <string name="category_welcome">Hoşgeldin,</string>
    <string name="category_tech">Teknoloji</string>
    <string name="category_science">Bilim</string>

    <string name="category_dialog_title">Çıkış?</string>
    <string name="category_dialog_message">Uygulamadan Çıkılsın Mı?</string>
    <string name="category_dialog_yes">Evet</string>
    <string name="category_dialog_no">Hayır</string>

    // GameActivity
    <string name="game_question">Soru:&#160;</string>
    <string name="game_score">Puan:&#160;</string>

    <string name="game_dialog_title">Cevap Doğru</string>
    <string name="game_dialog_exit">Çıkış</string>
    <string name="game_dialog_continue">Devam</string>

    // GameLostActivity
    <string name="game_lost_finished">Oyun Bitti</string>
    
    // GameWin
    <string name="game_won">Tebrikler</string>
    
</resources>